add tower bell sound batch add statue creation batch